# signal_processing_in_finance

./: CMakeLists.txt  Dockerfile  Makefile  README.md  WORKSPACE  annotated.html  annotated_dup.js  axi__dma__controller_8hpp.html  axi__dma__controller_8hpp.js  axi__dma__controller_8hpp_source.html  benchmarking.html  benchmarking_8md.html  citations.html  citations_8md.html  classSignalTrigger-members.html  classSignalTrigger.html  classSignalTrigger.js  classSignalTrigger_1_1Behavioral-members.html  classSignalTrigger_1_1Behavioral.html  classSignalTrigger_1_1Behavioral.js  classes.html  classhft_1_1hardware_1_1HardwareTrigger-members.html  classhft_1_1hardware_1_1HardwareTrigger.html  classhft_1_1hardware_1_1HardwareTrigger.js  classhft_1_1hardware_1_1dma_1_1AxiDmaController-members.html  classhft_1_1hardware_1_1dma_1_1AxiDmaController.html  classhft_1_1hardware_1_1dma_1_1AxiDmaController.js  classhft_1_1net_1_1ef__vi__context-members.html  classhft_1_1net_1_1ef__vi__context.html  classhft_1_1net_1_1ef__vi__context.js  classhft_1_1signals_1_1ConvexOptimizer-members.html  classhft_1_1signals_1_1ConvexOptimizer.html  classhft_1_1signals_1_1ConvexOptimizer.js  classhft_1_1signals_1_1KalmanFilter-members.html  classhft_1_1signals_1_1KalmanFilter.html  classhft_1_1signals_1_1KalmanFilter.js  classhft_1_1signals_1_1TickConsumer-members.html  classhft_1_1signals_1_1TickConsumer.html  convex__optimizer_8hpp.html  convex__optimizer_8hpp.js  (+126 more)
.github/workflows/: ci.yml  docs.yml  render-md-mermaid.yml
benchmarks/: CMakeLists.txt  signal_benchmarks.cpp
docs/: Doxyfile  benchmarking.md  citations.md  cpp26_features.md  getting_started.md  hardware.md  header.html  index.md  introduction.md  manual.md  networking.md  optimization.md  requirements.md  signals.md  verification.md
hardware/asm/: hardware_asm.hpp  simd_ops.cpp
hardware/vhdl/: signal_trigger.vhd
libs/dma_engine/: axi_dma_controller.hpp
libs/hardware_bridge/: hardware_trigger.hpp
libs/kernel_bypass/: ef_vi_lite.hpp
libs/optimizer/: BUILD.bazel  CMakeLists.txt  convex_optimizer.hpp
libs/state_estimator/: BUILD.bazel  CMakeLists.txt  kalman_filter.hpp
libs/tick_consumer/: BUILD.bazel  CMakeLists.txt  tick_consumer.hpp
scripts/: build.sh  render-md-mermaid.sh  run_vhdl_tests.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_23.js  all_24.js  all_25.js  all_26.js  all_27.js  all_28.js  all_29.js  all_2a.js  all_2b.js  all_2c.js  all_2d.js  all_2e.js  all_2f.js  all_3.js  all_30.js  all_4.js  all_5.js  all_6.js  all_8.js  all_a.js  (+94 more)
technical_specification/: requirements.md
tests/: CMakeLists.txt  asm_tests.cpp  signal_tests.cpp  signal_trigger_tb.vhd
